Fix 'Search field in navbar is collapsed (due to JS error)' - #9.

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -210,6 +210,13 @@
     opacity: 1;
 }
 
+.squared-search-input-navbar {
+    margin-top: 3px;
+    .icon {
+        color: $body-color;
+    }
+}
+
 .popover-region-messages .popover-region-toggle .icon {
     margin-top: 5px;
 }
